--- a/animation/index.html
+++ b/animation/index.html
@@ -9,6 +9,10 @@
     <title>Animation</title>
 </head>
 <body>
-    
+    <section class="circle-box">
+        <div class="circle-box__circle circle-box__circle--active"></div>
+        <div class="circle-box__circle"></div>
+        <div class="circle-box__circle"></div>
+    </section>
 </body>
 </html>
