--- a/animation/index.html
+++ b/animation/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <section class="circle-box">
-        <div class="circle-box__circle circle-box__circle--active"></div>
-        <div class="circle-box__circle"></div>
-        <div class="circle-box__circle"></div>
+        <div class="circle-box__circle circle-box__circle--active one"></div>
+        <div class="circle-box__circle two"></div>
+        <div class="circle-box__circle three"></div>
     </section>
 </body>
 </html>
